syntax = "proto3";
package corepb;

message Data {
  string type = 1;
  bytes payload = 2;
}

message Transaction {
  bytes hash  = 1;
  bytes from = 2;
  bytes to = 3;
  bytes value = 4;
  Data data = 5;
  uint64 nonce = 6;
  uint32 chain_id = 7;

  uint32 alg = 8;
  bytes sign = 9;
}
